fixed spacing above footer

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,9 @@ img {
     --spacing-lg: 2rem;        /* 32px */
     --spacing-xl: 3rem;        /* 48px */
     --spacing-2xl: 4rem;       /* 64px */
+    --spacing-2xl-md: 4.5rem;  /* 72px */
     --spacing-3xl: 5rem;       /* 80px */
+    --spacing-4xl-sm: 6.75rem; /* 108px */
     --spacing-4xl: 7rem;       /* 112px */
     --spacing-5xl: 8.25rem;    /* 132px */
     --spacing-6xl: 10rem;      /* 160px */
@@ -277,7 +279,7 @@ body {
     padding: var(--_footer-padding);
     color: var(--color-background);
     place-content: center;
-    margin-block-start: calc(var(--spacing-3xl) + 0.5 * var(--fs-xxl));
+    margin-block-start: calc(var(--spacing-4xl-sm) + var(--_footer-margin-top, var(--spacing-2xl-md)));
 }
 
 .footer-title {
@@ -412,6 +414,10 @@ body {
     
     .image-collage {
         gap: var(--spacing-md);
+    }
+
+    .footer-content-grid {
+        --_footer-margin-top: var(--spacing-2xl);
     }
 }
 
